editor: fix alignment items in callout heading

--- a/packages/editor/styles/styles.css
+++ b/packages/editor/styles/styles.css
@@ -710,7 +710,6 @@ p > *::selection {
 
 .ProseMirror div.callout > :first-child::after {
   position: absolute;
-  top: 3px;
   right: 0px;
   cursor: pointer;
   content: "";
